--- a/package.json
+++ b/package.json
@@ -1,114 +1,115 @@
 {
-  "name": "react-boilerplate",
-  "version": "1.0.0",
+  "name"       : "react-boilerplate",
+  "version"    : "1.0.0",
   "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier, Styled Components, React Testing Library, Webpack, Webpack Dev Server",
-  "main": "index.tsx",
-  "scripts": {
-    "dev": "webpack --mode development --watch",
-    "format": "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
-    "lint": "eslint . --ext \".js,.ts,.tsx,.jsx\"",
-    "style:check": "stylelint-config-prettier-check",
-    "type:check": "tsc",
-    "test": "is-ci \"test:coverage\" \"test:watch\"",
-    "test:once": "jest --no-cache --runInBand",
-    "test:watch": "jest --runInBand --watch",
-    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
+  "main"       : "index.tsx",
+  "scripts"    : {
+    "typings"      : "tcm -p \"src/**/*.+(css|scss)\" --camelCase --watch",
+    "dev"          : "webpack --mode development --watch",
+    "format"       : "prettier \"**/*.(js|ts|tsx|jsx)\" --write",
+    "lint"         : "eslint . --ext \".js,.ts,.tsx,.jsx\"",
+    "style:check"  : "stylelint-config-prettier-check",
+    "type:check"   : "tsc",
+    "test"         : "is-ci \"test:coverage\" \"test:watch\"",
+    "test:once"    : "jest --no-cache --runInBand",
+    "test:watch"   : "jest --runInBand --watch",
+    "test:debug"   : "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
     "test:coverage": "jest --coverage",
-    "cypress": "cypress open",
-    "build": "cross-env NODE_ENV=development webpack --config webpack.config.js",
-    "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "server": "nodemon --watch webpack.config.js -x cross-env NODE_ENV=development webpack-dev-server",
-    "server:prod": "cross-env NODE_ENV=production webpack-dev-server --config webpack.config.js",
-    "validate": "npm run build:prod && npm run build && npm run test:once && npm run test:coverage && npm run style:check npm run type:check",
-    "precommit": "lint-staged"
+    "cypress"      : "cypress open",
+    "build"        : "cross-env NODE_ENV=development webpack --config webpack.config.js",
+    "build:prod"   : "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "server"       : "nodemon --watch webpack.config.js -x cross-env NODE_ENV=development webpack-dev-server",
+    "server:prod"  : "cross-env NODE_ENV=production webpack-dev-server --config webpack.config.js",
+    "validate"     : "npm run build:prod && npm run build && npx jest --config ./test/jest.test.js && npx jest --config ./test/jest.tsc.js && npx jest --config ./test/jest.lint.js && npx jest --config ./test/jest.style.js && npm run test:coverage",
+    "precommit"    : "lint-staged"
   },
-  "author": "Sebastian Pieczyński",
-  "license": "MIT",
+  "author"      : "Sebastian Pieczy?ski",
+  "license"     : "MIT",
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "@emotion/core": "^10.0.5",
-    "@reach/router": "^1.2.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "@babel/polyfill"  : "^7.2.5",
+    "@emotion/core"    : "^10.0.5",
+    "@reach/router"    : "^1.2.1",
+    "react"            : "^16.7.0",
+    "react-dom"        : "^16.7.0",
     "styled-components": "^4.1.3",
-    "styled-system": "^3.2.0"
+    "styled-system"    : "^3.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/parser": "^7.2.3",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@babel/register": "^7.0.0",
-    "@types/jest": "^23.3.10",
-    "@types/node": "^10.12.18",
-    "@types/react": "^16.7.17",
-    "@types/react-dom": "^16.0.11",
-    "@types/webpack": "^4.4.22",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-plugin-emotion": "^10.0.5",
-    "babel-plugin-styled-components": "^1.10.0",
+    "@babel/cli"                                  : "^7.2.3",
+    "@babel/core"                                 : "^7.2.2",
+    "@babel/parser"                               : "^7.2.3",
+    "@babel/plugin-proposal-class-properties"     : "^7.2.3",
+    "@babel/plugin-syntax-dynamic-import"         : "^7.2.0",
+    "@babel/preset-env"                           : "^7.2.3",
+    "@babel/preset-react"                         : "^7.0.0",
+    "@babel/preset-typescript"                    : "^7.1.0",
+    "@babel/register"                             : "^7.0.0",
+    "@types/jest"                                 : "^23.3.10",
+    "@types/node"                                 : "^10.12.18",
+    "@types/react"                                : "^16.7.17",
+    "@types/react-dom"                            : "^16.0.11",
+    "@types/webpack"                              : "^4.4.22",
+    "babel-loader"                                : "^8.0.4",
+    "babel-plugin-dynamic-import-node"            : "^2.2.0",
+    "babel-plugin-emotion"                        : "^10.0.5",
+    "babel-plugin-styled-components"              : "^1.10.0",
     "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "chalk": "^2.4.2",
-    "clean-webpack-plugin": "^1.0.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "create-jest-runner": "^0.4.1",
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
-    "cypress": "^3.1.4",
-    "cypress-testing-library": "^2.3.5",
-    "eslint": "^5.10.0",
-    "eslint-import-resolver-jest": "^2.1.1",
-    "eslint-plugin-cypress": "^2.2.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-typescript": "^0.14.0",
-    "file-loader": "^3.0.1",
-    "html-loader": "^0.5.5",
-    "html-minifier": "^3.5.21",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.3.1",
-    "image-webpack-loader": "^4.6.0",
-    "is-ci-cli": "^1.1.1",
-    "jest": "^23.6.0",
-    "jest-emotion": "^10.0.6",
-    "jest-in-case": "^1.0.2",
-    "jest-resolve": "^24.0.0",
-    "jest-runner-eslint": "^0.7.1",
-    "jest-runner-stylelint": "^1.0.0",
-    "jest-runner-tsc": "^1.3.2",
-    "jest-watch-select-projects": "^0.1.1",
-    "jest-watch-typeahead": "^0.2.0",
-    "lint-staged": "^8.1.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "nodemon": "^1.18.9",
-    "pluggable-babel-eslint": "^0.3.0",
-    "prettier": "^1.15.3",
-    "prettier-stylelint": "^0.4.2",
-    "react-hot-loader": "^4.6.3",
-    "react-testing-library": "^5.4.2",
-    "sass-loader": "^7.1.0",
-    "source-map-loader": "^0.2.4",
-    "start-server-and-test": "^1.7.11",
-    "style-loader": "^0.23.1",
-    "stylelint": "^9.9.0",
-    "stylelint-config-prettier": "^4.0.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-webpack-plugin": "^0.10.5",
-    "typed-css-modules": "^0.3.7",
-    "typescript": "^3.2.2",
-    "typescript-babel-jest": "^1.0.5",
-    "typescript-eslint-parser": "^21.0.2",
-    "typings-for-css-modules-loader": "^1.7.0",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "case-sensitive-paths-webpack-plugin"         : "^2.2.0",
+    "chalk"                                       : "^2.4.2",
+    "clean-webpack-plugin"                        : "^1.0.0",
+    "copy-webpack-plugin"                         : "^4.6.0",
+    "create-jest-runner"                          : "^0.4.1",
+    "cross-env"                                   : "^5.2.0",
+    "css-loader"                                  : "^2.1.0",
+    "cypress"                                     : "^3.1.4",
+    "cypress-testing-library"                     : "^2.3.5",
+    "eslint"                                      : "^5.10.0",
+    "eslint-import-resolver-jest"                 : "^2.1.1",
+    "eslint-plugin-cypress"                       : "^2.2.0",
+    "eslint-plugin-import"                        : "^2.14.0",
+    "eslint-plugin-typescript"                    : "^0.14.0",
+    "file-loader"                                 : "^3.0.1",
+    "html-loader"                                 : "^0.5.5",
+    "html-minifier"                               : "^3.5.21",
+    "html-webpack-plugin"                         : "^3.2.0",
+    "husky"                                       : "^1.3.1",
+    "image-webpack-loader"                        : "^4.6.0",
+    "is-ci-cli"                                   : "^1.1.1",
+    "jest"                                        : "^23.6.0",
+    "jest-emotion"                                : "^10.0.6",
+    "jest-in-case"                                : "^1.0.2",
+    "jest-resolve"                                : "^24.0.0",
+    "jest-runner-eslint"                          : "^0.7.1",
+    "jest-runner-stylelint"                       : "^1.0.0",
+    "jest-runner-tsc"                             : "^1.3.2",
+    "jest-watch-select-projects"                  : "^0.1.1",
+    "jest-watch-typeahead"                        : "^0.2.0",
+    "lint-staged"                                 : "^8.1.0",
+    "mini-css-extract-plugin"                     : "^0.5.0",
+    "node-sass"                                   : "^4.11.0",
+    "nodemon"                                     : "^1.18.9",
+    "pluggable-babel-eslint"                      : "^0.3.0",
+    "prettier"                                    : "^1.15.3",
+    "prettier-stylelint"                          : "^0.4.2",
+    "react-hot-loader"                            : "^4.6.3",
+    "react-testing-library"                       : "^5.4.2",
+    "sass-loader"                                 : "^7.1.0",
+    "source-map-loader"                           : "^0.2.4",
+    "start-server-and-test"                       : "^1.7.11",
+    "style-loader"                                : "^0.23.1",
+    "stylelint"                                   : "^9.9.0",
+    "stylelint-config-prettier"                   : "^4.0.0",
+    "stylelint-config-standard"                   : "^18.2.0",
+    "stylelint-webpack-plugin"                    : "^0.10.5",
+    "typed-css-modules"                           : "^0.3.7",
+    "typescript"                                  : "^3.2.2",
+    "typescript-babel-jest"                       : "^1.0.5",
+    "typescript-eslint-parser"                    : "^21.0.2",
+    "typings-for-css-modules-loader"              : "^1.7.0",
+    "uglifyjs-webpack-plugin"                     : "^2.1.1",
+    "webpack"                                     : "^4.28.3",
+    "webpack-cli"                                 : "^3.1.2",
+    "webpack-dev-server"                          : "^3.1.14"
   },
   "resolutions": {
     "babel-core": "^7.0.0-bridge.0"
