--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
     "noFallthroughCasesInSwitch"  : true /* Report errors for fallthrough cases in switch statement. */,
     // "moduleResolution"            : "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     // "module"                      : "es2015" /*allows dynamic import */,
-    "baseUrl": "./src"  /* Base directory to resolve non-absolute module names. */
-    // "allowJs"                     : true,
-    // "sourceMap"                   : true
+    "baseUrl"  : "./src" /* Base directory to resolve non-absolute module names. */,
+    "allowJs"  : true,
+    "sourceMap": true
   },
 
   "include": ["src"],
