--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name"       : "react-boilerplate",
   "version"    : "0.15.0",
+  "author"     : "Sebastian Pieczyński",
+  "license"    : "MIT",
   "description": "React Boilerplate with Typescript, Babel, Jest, EsLint, Prettier, Styled Components, React Testing Library, Webpack, Webpack Dev Server",
   "main"       : "index.tsx",
   "scripts"    : {
@@ -40,15 +42,13 @@
       "pre-commit": "lint-staged"
     }
   },
-  "author"      : "Sebastian Pieczyński",
-  "license"     : "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "@emotion/core"  : "^10.0.5",
     "@reach/router"  : "^1.2.1",
     "emotion-theming": "^10.0.6",
-    "react"          : "^16.8.0-alpha.1 ",
-    "react-dom"      : "^16.7.0",
+    "react"          : "^16.8.0",
+    "react-dom"      : "^16.8.0",
     "styled-system"  : "^3.2.0"
   },
   "devDependencies": {
@@ -61,6 +61,7 @@
     "@babel/preset-react"                         : "^7.0.0",
     "@babel/preset-typescript"                    : "^7.1.0",
     "@babel/register"                             : "^7.0.0",
+    "@emotion/babel-preset-css-prop"              : "^10.0.7",
     "@mapbox/rehype-prism"                        : "^0.3.1",
     "@types/jest"                                 : "^23.3.10",
     "@types/jest-in-case"                         : "^1.0.0",
@@ -88,6 +89,7 @@
     "eslint-import-resolver-jest"                 : "^2.1.1",
     "eslint-plugin-cypress"                       : "^2.2.0",
     "eslint-plugin-import"                        : "^2.14.0",
+    "eslint-plugin-react-hooks"                   : "^1.0.0",
     "eslint-plugin-typescript"                    : "^0.14.0",
     "file-loader"                                 : "^3.0.1",
     "html-loader"                                 : "^0.5.5",
@@ -105,6 +107,7 @@
     "jest-runner-stylelint"                       : "^1.0.0",
     "jest-runner-tsc"                             : "^1.3.2",
     "jest-watch-select-projects"                  : "^0.1.1",
+    "jest-watch-suspend"                          : "^1.1.1",
     "jest-watch-typeahead"                        : "^0.2.0",
     "lint-staged"                                 : "^8.1.0",
     "mini-css-extract-plugin"                     : "^0.5.0",
@@ -116,8 +119,9 @@
     "postcss-preset-env"                          : "^6.5.0",
     "prettier"                                    : "^1.15.3",
     "prettier-stylelint"                          : "^0.4.2",
+    "react-error-boundary"                        : "^1.2.3",
     "react-hot-loader"                            : "^4.6.3",
-    "react-testing-library"                       : "^5.4.2",
+    "react-testing-library"                       : "^5.5.0",
     "sass-loader"                                 : "^7.1.0",
     "serve"                                       : "^10.1.1",
     "source-map-loader"                           : "^0.2.4",
@@ -127,13 +131,13 @@
     "stylelint-config-prettier"                   : "^4.0.0",
     "stylelint-config-standard"                   : "^18.2.0",
     "stylelint-webpack-plugin"                    : "^0.10.5",
+    "terser-webpack-plugin"                       : "^1.2.2",
     "typed-css-modules"                           : "^0.3.7",
     "typescript"                                  : "^3.2.2",
     "typescript-babel-jest"                       : "^1.0.5",
     "typescript-eslint-parser"                    : "^21.0.2",
     "typings-for-css-modules-loader"              : "^1.7.0",
     "url-loader"                                  : "^1.1.2",
-    "watch"                                       : "^1.0.2",
     "webpack"                                     : "^4.28.3",
     "webpack-cli"                                 : "^3.1.2",
     "webpack-dev-server"                          : "^3.1.14"
